# wealth

./: .dockerignore  .gitignore  .opencode.json  ARCHITECTURE.md  ARIF.md  CHANGELOG.md  CHANGELOG_2026.04.29.md  CLAUDE.md  Dockerfile  FIX_SPEC_URAI_v2.md  IDENTITY.md  README.md  REPO_ROUTING_CONSTITUTION.md  WEALTH_SOT.md  claude_desktop_config.json  cli.js  entrypoint.sh  fastmcp.json  mcp.json  monolith.py  package.json  pyproject.toml  registry.json  requirements.txt  server.py  v2_systemic_intelligence_test.py  wealth_landing.html
.antigravity/: rules.md
.well-known/: mcp.json
archive/: AAA_FEDERATION_CONSTITUTION.md
canon/: CAPITALX_SPEC.md  CASE_STUDIES.md  COSMOLOGY.md  ECONOMIC_MODEL.md  GLOSSARY.md  GOVERNANCE.md  NODE_SPEC.md  README.md  ROADMAP.md  STRESS_TESTS.md  TELEMETRY_SCHEMA.md  THREAT_MODEL.md  WEALTH_HARNESS.md
capitalx/: DESIGN.md
civilizational/: boundary_monitor.js  cascade_detector.js  prosperity_index.js
columns/: 2026-03-01_Teater_Hijau_Jilid_3.md
data/: ingest_health.json  sample-state.json  schema.json  vault999.jsonl
docs/: 888-hold-log.md  VAULT999_WEALTH_MCP_FIX.md  epistemic-tags.md  first-loop-checklist.md  floors-spec.md  mcp-tool-families-spec.md
domain/: maruah-score.js  projection.js
host/: __init__.py
internal/: governance.py  invariants.py  kernel_math.py  monolith.py  monolith.py.v66.backup.1777436088
mcp/: README.md  server.py
raw/: CONSTITUTION.md  POST_AGI_ECONOMICS_MANIFESTO.md  WAW_WEALTH_OVERVIEW.md
scripts/: invoke_tool.js
src/: index.js
tests/: core.test.js  finance.test.js  governance.test.js  governed_loop.js  ingest.test.js  test_internal_imports.py  (+1 more)
(+146 files in other folders)
