[project]
name = "wealth-valuation-kernel"
version = "1.4.0"
description = "WEALTH Sovereign Valuation Kernel — Universal Resource Allocation Intelligence (URAI) with constitutional governance for arifOS"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "PROPRIETARY"}
authors = [
    {name = "Arif Fazil", email = "arif@arif-fazil.com"}
]
keywords = ["finance", "valuation", "mcp", "arifOS", "constitutional-ai", "wealth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "fastmcp==2.12.3",
]
