[project]
name = "wealth-valuation-kernel"
version = "2026.04.29"
description = "WEALTH Sovereign Valuation Kernel — Universal Resource Allocation Intelligence (URAI) with constitutional governance for arifOS"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "PROPRIETARY"}
authors = [
    {name = "Arif Fazil", email = "arif@arif-fazil.com"}
]
keywords = ["finance", "valuation", "mcp", "arifOS", "constitutional-ai", "wealth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "supabase>=2.10.0",
    "fastmcp>=3.2.4",
    "numpy>=1.26.0",
    "psycopg[binary]>=3.1.0",
]
